fix: add icon-sprite

--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
       <section class="block">
         <div class="block__wrapper">
           <div class="title">
-            <span class="title__icon title__icon--about"></span>
+            <svg class="title__icon">
+              <use xlink:href="./img/icon-sprite.svg#about"></use>
+            </svg>
             <h2>About me</h2>
           </div>
           <p class="text">At my last job, I was developing extensions for a Qlick Sense analytics system. The work
             involved visualizing data in the form of various charts such as columns, pie, waterfall and many others.
             Since the area is quite specialized, I want to expand my skills to a complete front-end developer.</p>
 
-          <svg class="logo">
-            <use xlink:href="./img/test.svg#HeaderLogo"></use>
-          </svg>
-
         </div>
       </section>
       <section class="block">
         <div class="block__wrapper">
           <div class="title">
-            <span class="title__icon title__icon--experience"></span>
+            <svg class="title__icon">
+              <use xlink:href="./img/icon-sprite.svg#experience"></use>
+            </svg>
             <h2>Job experience</h2>
           </div>
           <ul class="detailed-list">
@@ -66,8 +66,8 @@
       <section class="block">
         <div class="block__wrapper">
           <div class="title">
-            <svg class="title__icon" viewBox="0 0 24 24" width="24" height="24">
-              <use xlink:href="img/icon-sprite.svg#skills"></use>
+            <svg class="title__icon">
+              <use xlink:href="./img/icon-sprite.svg#file"></use>
             </svg>
             <h2>Skills</h2>
           </div>
@@ -121,20 +121,28 @@
       <section class="block">
         <div class="block__wrapper">
           <div class="title">
-            <span class="title__icon title__icon--contact"></span>
+            <svg class="title__icon">
+              <use xlink:href="./img/icon-sprite.svg#contacts"></use>
+            </svg>
             <h2>Contacts</h2>
           </div>
           <ul class="contact-list">
             <li class="item">
-              <span class="contact__icon contact__icon--email"></span>
+              <svg class="contact__icon">
+                <use xlink:href="./img/icon-sprite.svg#email"></use>
+              </svg>
               <a href="mailto:katerina0708@gmail.com" class="item__name">katerina0708@gmail.com</a>
             </li>
             <li class="item">
-              <span class="contact__icon contact__icon--github"></span>
+              <svg class="contact__icon">
+                <use xlink:href="./img/icon-sprite.svg#github"></use>
+              </svg>
               <a href="https://github.com/faviru" class="item__name">https://github.com/faviru</a>
             </li>
             <li class="item">
-              <span class="contact__icon contact__icon--telegram"></span>
+              <svg class="contact__icon">
+                <use xlink:href="./img/icon-sprite.svg#telegram"></use>
+              </svg>
               <a href="https://t.me/Faviruu" class="item__name">https://t.me/Faviruu</a>
             </li>
           </ul>
@@ -144,7 +152,9 @@
       <section class="block">
         <div class="block__wrapper">
           <div class="title">
-            <span class="title__icon title__icon--education"></span>
+            <svg class="title__icon">
+              <use xlink:href="./img/icon-sprite.svg#education"></use>
+            </svg>
             <h2>Education</h2>
           </div>
           <ul class="detailed-list">
@@ -164,7 +174,9 @@
       <section class="block">
         <div class="block__wrapper">
           <div class="title">
-            <span class="title__icon title__icon--languages"></span>
+            <svg class="title__icon">
+              <use xlink:href="./img/icon-sprite.svg#file"></use>
+            </svg>
             <h2>Languages</h2>
           </div>
           <ul class="simple-list">
